=== (ongoing) ===


=== 0.3 ===

- added TagManager

=== 0.2 ===

- simplifications

=== 0.1 ===

- Initial commit