@@ -1,5 +1,9 @@
 """Tests for the models of the multilingual_tags app."""
+from django.contrib.contenttypes.models import ContentType
 from django.test import TestCase
+
+from .test_app.models import DummyModel
+from django_libs.tests.factories import UserFactory
 
 from . import factories
 from .. import models
@@ -47,9 +51,20 @@ class TagManagerTestCase(TestCase):
 
         factories.TaggedItemFactory()
 
-    def test_managet(self):
+        self.user_item = factories.TaggedItemFactory(object=UserFactory())
+
+    def test_manager(self):
         self.assertEqual(
             list(models.Tag.objects.get_for_obj(self.dummy)),
             list(models.Tag.objects.filter(
-                tagged_items__object_id=self.dummy.id)),
+                tagged_items__object_id=self.dummy.id,
+                tagged_items__content_type=ContentType.objects.get_for_model(
+                    DummyModel))),
+            msg='Expected different tags from the manager.')
+
+        self.assertEqual(
+            list(models.Tag.objects.get_for_queryset(
+                DummyModel.objects.all())),
+            list(models.Tag.objects.exclude(
+                tagged_items__id=self.user_item.id)),
             msg='Expected different tags from the manager.')
